# house-pricing-prediction

./: .gitignore  README.md  pyproject.toml
.viz/: stats.json
conf/base/: catalog.yml  logging.yml  parameters_data_science.yml
docs/source/: conf.py  index.rst
src/: pyproject.toml  requirements.txt
src/house_pricing_prediction/: __init__.py  __main__.py  settings.py
src/house_pricing_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/house_pricing_prediction/pipelines/data_science/: nodes.py  pipeline.py
src/tests/: test_run.py
